--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,17 @@ body{
     font-family: sans-serif, Arial, Helvetica, sans-serif;
 }
 
+.tituloDerecha{
+    margin: 0%;
+    padding: 0%;
+    padding-top: 10%;
+    padding-left: 10%;
+    color: black;
+    font-size: 35px;
+    font-weight: 700;
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+}
+
 .Inicio{
     margin-top: 40%;
     height: 100px;
@@ -152,4 +163,122 @@ body{
     font-size: 20px;
     color: #444;
     font-family: sans-serif, Arial, Helvetica, sans-serif;
+}
+
+.pantallaDerecha{
+    float: right;
+    background-color: white;
+    height: 1000vh;
+    width: 380px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px ;
+    margin: 0%;
+    margin-top: 8%;
+    margin-right: 1%;
+    padding: 0%;
+}
+
+.iconEspecialistas{
+    height: 80px;
+    width: 80px;
+}
+
+.iconEspecialistas2{
+    height: 69px;
+    width: 69px;
+    margin-left: 7px;
+}
+
+.iconEspecialistas3{
+    height: 69px;
+    width: 69px;
+    margin-left: 7px;
+    border-radius: 50%;
+}
+
+.nombreEspecialistas{
+    font-size: 30px;
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    position: absolute;
+    margin-top: -4%;
+    margin-left: 6%;
+}
+
+.Especialidad{
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    position: absolute;
+    margin-top: -2%;
+    margin-left: 6%;
+    font-size: 15px;
+    color: grey;
+}
+
+.btnAgregarTarea {
+    position: absolute;
+    margin-top: -2.2%;
+    margin-left: 12%;
+    background-color: #87CEEB; /* Fondo celeste */
+    color: white; /* Texto en blanco */
+    font-size: 18px; /* Tamaño del texto */
+    font-family: Arial, sans-serif; /* Fuente */
+    padding: 10px 20px; /* Espaciado interno */
+    border: none; /* Sin borde */
+    border-radius: 5px; /* Bordes redondeados */
+    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Sombra */
+    transition: background-color 0.3s ease; /* Efecto de transición suave */
+}
+
+.btnAgregarTarea:hover {
+    background-color: #00BFFF; /* Cambia a un azul más intenso al pasar el mouse */
+}
+
+.boxReunion{
+    margin-top: -5%;
+    margin-left: 6%;
+    position: absolute;
+    height: 70px;
+    width: 270px;
+    background-color: #f3f3f3;
+    border-left: 5px aqua solid;
+}
+
+.boxReunion2{
+    margin-top: -5%;
+    margin-left: 6%;
+    position: absolute;
+    height: 70px;
+    width: 270px;
+    background-color: #f3f3f3;
+    border-left: 5px red solid;
+}
+
+.dias{
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    margin-left: 10%;
+    font-size: 24px;
+}
+
+.textoReunion{
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    font-size: 18;
+    margin-left: 4%;
+}
+
+.textoHorario{
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    font-size: 18x;
+    margin-top: -7%;
+    margin-left: 50%;
+}
+
+.textoHorario2{
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    font-size: 18x;
+    margin-top: -1%;
+    margin-left: 50%;
+}
+
+.pantallaMedio{
+    position: absolute;
 }
