--- a/styles2.css
+++ b/styles2.css
@@ -1,120 +1,38 @@
-body{
+/* General Body Settings */
+body {
     background-color: whitesmoke;
-    margin: 0%;
-    padding: 0%;
-    /* overflow: hidden; */
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
-.pantallaIzquierda{
-    background-color: white;
-    height: 130vh;
-    width: 320px;
-    margin: 0%;
-    padding: 0%;
-    position: absolute;
-    margin-top: -4.4%;
-}
-
-.tituloPantallaIzquierda{
-    margin: 0%;
-    padding: 0%;
-    padding-top: 15%;
-    padding-left: 15%;
-    color: #17A589;
-    font-size: 50px;
-    font-family: sans-serif, Arial, Helvetica, sans-serif;
-}
-
-.tituloDerecha{
-    margin: 0%;
-    padding: 0%;
-    padding-top: 10%;
-    padding-left: 10%;
-    color: black;
-    font-size: 35px;
-    font-weight: 700;
-    font-family: sans-serif, Arial, Helvetica, sans-serif;
-}
-
-.Inicio{
-    margin-top: 40%;
-    height: 100px;
-    width: 270px;
-}
-
-.TextoInicio{
-    font-size:28px;
-    font-family: sans-serif, Arial, Helvetica, sans-serif;
-    padding-left: 85px;
-    padding-top: 35px;
-    
-}
-
-.CasaIcon{
-    height: 45px;
-    width: 45px;
-    position: absolute;
-    margin-top: 25px;
-    margin-left: 15px;
-}
-
-.boxGeneral{
-    height: 100px;
-    width: 270px;
-    background-color: white;
-}
-
-.boxGeneral1{
-    height: 100px;
-    width: 270px;
-    background-color: #17A589;
-}
-
-.TextoGeneral{
-    font-size:28px;
-    font-family: sans-serif, Arial, Helvetica, sans-serif;
-    padding-left: 85px;
-    padding-bottom: 1000px;
-    position: absolute;
-}
-
-.IconGeneral{
-    height: 45px;
-    width: 45px;
-    position: absolute;
-    margin-top: 25px;
-    margin-left: 15px;
-}
-
-/* Estilo para la parte superior */
+/* Barra Superior */
 .barraSuperior {
+    margin-left: 18.5%;
     display: flex;
     align-items: center;
     height: 80px;
     padding: 0 20px;
     justify-content: space-between;
-}
-
-.tituloBarraSuperior {
-    color: #17A589;
-    font-size: 40px;
-    font-family: sans-serif, Arial, Helvetica, sans-serif;
-    margin: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: whitesmoke;
+    z-index: 1000;
 }
 
 .buscador {
-    padding-left: 20%;
     display: flex;
     align-items: center;
     width: 50%;
 }
 
 .inputBuscar {
-    margin-top: 10%;
     width: 100%;
-    height: 60px;
+    height: 40px;
     padding: 10px;
-    font-size: 30px;
+    font-size: 18px;
     border-radius: 20px 0 0 20px;
     border: 2px solid #17A589;
     outline: none;
@@ -123,12 +41,13 @@ body{
 .btnBuscar {
     background-color: #17A589;
     border: none;
-    padding: 10px;
+    padding: 5px;
     border-radius: 0 20px 20px 0;
-    margin-top: 10%;
-    height: 82.6px;
-    width: 100px;
+    height: 63px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .iconoBuscar {
@@ -142,10 +61,9 @@ body{
 }
 
 .iconoNotificaciones {
-    height: 40px;
-    width: 40px;
-    margin-right: 100px;
-    margin-top: 37%;
+    height: 24px; /* Ajustado */
+    width: 24px; /* Ajustado */
+    margin-right: 20px;
     cursor: pointer;
 }
 
@@ -156,87 +74,314 @@ body{
 }
 
 .iconoPerfil {
-    height: 40px;
-    width: 40px;
-    margin-right: 20px;
-    margin-top: 70.8%;
-    
+    height: 30px; /* Ajustado */
+    width: 30px; /* Ajustado */
+    margin-right: 10px;
 }
 
 .textoPerfil {
-    margin-top: 70.8%;
-    font-size: 20px;
-    color: #444;
-    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    font-size: 16px; /* Ajustado */
+    color: #333;
 }
 
-.pantallaDerecha{
-    float: right;
+/* Parte Izquierda */
+.pantallaIzquierda {
     background-color: white;
-    height: 106.5vh;
-    width: 380px;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px ;
-    margin: 0%;
-    margin-top: 8%;
-    margin-right: 1%;
-    padding: 0%;
+    height: 100vh;
+    width: 320px;
+    position: fixed;
+    top: 0%;
+    left: 0;
+    padding-top: 20px;
+    z-index: 900;
+    overflow-y: auto;
 }
 
-
-
-.Especialidad{
+.tituloPantallaIzquierda {
+    padding-left: 15%;
+    color: #17A589;
+    font-size: 30px;
     font-family: sans-serif, Arial, Helvetica, sans-serif;
-    position: absolute;
-    margin-top: -2%;
-    margin-left: 6%;
-    font-size: 15px;
-    color: grey;
 }
 
-.btnAgregarTarea {
+.Inicio,
+.boxGeneral {
+    height: 60px; /* Ajustado */
+    width: 270px;
+    background-color: white;
+    padding: 10px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.Inicio:hover,
+.boxGeneral:hover {
+    background-color: #f1f1f1;
+}
+
+.TextoInicio,
+.TextoGeneral {
+    font-size: 18px;
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    padding-left: 15px;
+}
+
+.CasaIcon,
+.IconGeneral {
+    height: 24px; /* Ajustado */
+    width: 24px; /* Ajustado */
+    margin-right: 15px;
+}
+
+/* Parte Medio */
+.pantallaMedio {
+    margin-left: 340px;
+    margin-top: 100px;
+    padding: 20px;
+    overflow-y: auto;
+}
+
+.tituloPrincipal {
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    font-size: 32px; /* Ajustado */
+    margin-bottom: 20px;
+}
+
+.btnAgregarTicket {
     position: absolute;
-    margin-top: -3.5%;
-    margin-left: 18%;
-    background-color: #87CEEB; /* Fondo celeste */
-    color: white; /* Texto en blanco */
-    font-size: 18px; /* Tamaño del texto */
-    font-family: Arial, sans-serif; /* Fuente */
-    padding: 10px 20px; /* Espaciado interno */
-    border: none; /* Sin borde */
-    border-radius: 5px; /* Bordes redondeados */
-    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Sombra */
-    transition: background-color 0.3s ease; /* Efecto de transición suave */
+    margin-top: -3%;
+    margin-left: 40%;
+    background-color: #87CEEB;
+    color: white;
+    font-size: 14px;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: inline-block;
+    margin-bottom: 20px; /* Ajustado */
+}
+
+.btnAgregarTicket:hover {
+    background-color: #00BFFF;
+}
+
+.btnAgregarTarea{
+    margin-top: -13%;
+    margin-left: 50%;
+    position: absolute;
+    background-color: #87CEEB;
+    color: white;
+    font-size: 14px;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: inline-block;
+    margin-bottom: 20px; /* Ajustado */
 }
 
 .btnAgregarTarea:hover {
-    background-color: #00BFFF; /* Cambia a un azul más intenso al pasar el mouse */
+    background-color: #00BFFF;
 }
 
-
-.pantallaMedio{
-    position: absolute;
-    height: 100%;
-    width: 100%;
-}
-
-.tituloPrincipal{
-    font-family: sans-serif, Arial, Helvetica, sans-serif;
-    font-size: 40px;
-    margin-top: 8%;
-    margin-left: 20%;
-}
-
-.card{
-    margin-left: 20%;
-    height: 400px;
+.card {
+    height: 300px;
     width: 300px;
+    margin-bottom: 20px;
+    padding: 20px;
     background-color: white;
     border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+.iconEspecialistas {
+    height: 50px; /* Ajustado */
+    width: 50px; /* Ajustado */
+    border-radius: 50%;
+    margin-right: 10px;
+    display: inline-block;
+    vertical-align: middle;
+}
 
-.textoLetra{
+.TextoUsua {
+    font-size: 18px; /* Ajustado */
+    font-weight: bold;
+    margin-top: 10px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.TextoGmail {
+    font-size: 14px; /* Ajustado */
+    color: grey;
+    display: block;
+    margin-top: 5px;
+}
+
+.textoLetra {
+    font-size: 14px; /* Ajustado */
+    color: #333;
+    margin-top: 10px;
+}
+
+.textoCard {
+    font-weight: normal;
+}
+
+.textoError {
+    font-weight: bold;
+    color: red;
+}
+
+.btnAgregarEnable,
+.btnAgregarEnable2 {
+    background-color: #17A589;
+    color: white;
+    font-size: 14px;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: inline-block;
+    margin-top: 10px;
+}
+
+.btnAgregarEnable2 {
+    background-color: #f39c12;
+}
+
+.btnAgregarEnable:hover,
+.btnAgregarEnable2:hover {
+    background-color: #16a085;
+}
+
+.btnAgregarEnable2:hover {
+    background-color: #e67e22;
+}
+
+/* Parte Derecha */
+.pantallaDerecha {
+    position: fixed;
+    right: 0;
+    top: 80px;
+    height: calc(100vh - 80px);
+    width: 380px;
+    background-color: white;
+    padding: 20px;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
+}
+
+.tituloDerecha {
+    font-size: 25px;
+    font-weight: 700;
     font-family: sans-serif, Arial, Helvetica, sans-serif;
+    margin-bottom: 20px;
+}
+
+.EspecialistasPefil {
+    display: flex;
+    flex-direction: column;
+}
+
+.iconEspecialistas2,
+.iconEspecialistas3 {
+    height: 50px; /* Ajustado */
+    width: 50px; /* Ajustado */
+    border-radius: 50%;
+    margin-right: 10px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.nombreEspecialistas {
+    font-size: 16px; /* Ajustado */
+    margin-bottom: 5px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.Especialidad {
+    font-size: 14px;
+    color: grey;
+    display: block;
+    margin-top: 5px;
+}
+
+.tareas {
+    margin-bottom: 20px;
+}
+
+.dias {
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.boxReunion,
+.boxReunion2 {
+    margin-bottom: 10px;
+    padding: 15px;
+    background-color: #f3f3f3;
+    border-left: 5px solid;
+}
+
+.boxReunion {
+    border-color: aqua;
+}
+
+.boxReunion2 {
+    border-color: red;
+}
+
+.textoReunion,
+.textoHorario,
+.textoHorario2 {
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
+
+.textCompra{
+    color: black;
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.plata{
+    margin-top: -9%;
+    color: black;
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.textogris{
+    color: gray;
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    font-size: 18px;
+}
+
+.card2{
+    position: absolute;
+    margin-top: -20.3%;
+    margin-left: 24%;
+}
+
+.equipoDesarrollo{
+    height: 500px;
+    width: 67%;
+    padding: 0%;
+    margin-bottom: 0%;
+    padding: 0%;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
