--- a/styles2.css
+++ b/styles2.css
@@ -1,6 +1,6 @@
 /* General Body Settings */
 body {
-    background-color:  #ffffff;
+    background-color:  #E7E7E7;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
@@ -18,7 +18,7 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    background-color: #ffffff;
+    background-color: #E7E7E7;
     z-index: 1000;
 }
 
